force-app/main/default/objects/Dynacat_Record_Attribute__c/Dynacat_Record_Attribute__c.object-meta.xml
<CustomObject>
    <label>Record Attribute</label>
    <nameField>
        <displayFormat>RA{00000}</displayFormat>
        <label>Record Attribute Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Record Attributes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>