force-app/main/default/objects/Dynacat_Record_Attribute__c/fields/Attribute__c.field-meta.xml
<CustomField>
    <fullName>Attribute__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Attribute</label>
    <referenceTo>Dynacat_Attribute__c</referenceTo>
    <relationshipLabel>Record Attributes</relationshipLabel>
    <relationshipName>Product_Attributes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>