force-app/main/default/objects/Dynacat_Record_Attribute__c/fields/Attribute_UID__c.field-meta.xml
<CustomField>
    <fullName>Attribute_UID__c</fullName>
    <inlineHelpText>This isn&apos;t a unique Id, it stores the unique Id of the attribute being linked.</inlineHelpText>
    <label>Attribute UID</label>
    <length>55</length>
    <type>Text</type>
</CustomField>