force-app/main/default/objects/Dynacat_Record_Attribute__c/fields/Dynacat_Product__c.field-meta.xml
<CustomField>
    <fullName>Dynacat_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dynacat Product</label>
    <referenceTo>Dynacat_Product__c</referenceTo>
    <relationshipLabel>Record Attributes</relationshipLabel>
    <relationshipName>Dynacat_Product_Attributes</relationshipName>
    <type>Lookup</type>
</CustomField>