force-app/main/default/objects/Dynacat_Record_Attribute__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <formula>Attribute__r.Level__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>