force-app/main/default/objects/Dynacat_Record_Attribute__c/fields/Path__c.field-meta.xml
<CustomField>
    <fullName>Path__c</fullName>
    <formula>IF( !ISBLANK(Attribute__r.Parent_Attribute__c), 

IF( !ISBLANK(Attribute__r.Parent_Attribute__r.Parent_Attribute__c), 

IF( !ISBLANK(Attribute__r.Parent_Attribute__r.Parent_Attribute__r.Parent_Attribute__c),

IF( !ISBLANK(Attribute__r.Parent_Attribute__r.Parent_Attribute__r.Parent_Attribute__r.Parent_Attribute__c), 
Attribute__r.Parent_Attribute__r.Parent_Attribute__r.Parent_Attribute__r.Parent_Attribute__r.Name + &quot; &gt; &quot;,
&quot;&quot;)

+ Attribute__r.Parent_Attribute__r.Parent_Attribute__r.Parent_Attribute__r.Name + &quot; &gt; &quot;,
&quot;&quot;)

+ Attribute__r.Parent_Attribute__r.Parent_Attribute__r.Name + &quot; &gt; &quot;,
&quot;&quot;)

+ Attribute__r.Parent_Attribute__r.Name + &quot; &gt; &quot;,
&quot;&quot;) + Attribute__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Path</label>
    <type>Text</type>
</CustomField>