force-app/main/default/objects/Dynacat_Record_Attribute__c/fields/Product2__c.field-meta.xml
<CustomField>
    <fullName>Product2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Record Attributes</relationshipLabel>
    <relationshipName>Record_Attributes</relationshipName>
    <type>Lookup</type>
</CustomField>