force-app/main/default/objects/Dynacat_Record_Attribute__c/fields/Record_UID__c.field-meta.xml
<CustomField>
    <fullName>Record_UID__c</fullName>
    <label>Record UID</label>
    <length>55</length>
    <type>Text</type>
</CustomField>